--- a/Website/contactus.html
+++ b/Website/contactus.html
@@ -13,38 +13,51 @@
         <link rel="icon" type="image/x-icon" href="images/ARmed_logo.jpg">
     </head>    
 
-    <!-- This is for the nav bar -->
     <body>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <!-- This is for the nav bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container justify-content-center">
-              <a class="navbar-brand" href="#">
-                <img src= "images/ARmed_logo.jpg" alt="logo picture" width="50">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#">
+                <img src="images/ARmed_logo.jpg" alt="ARmed Logo" width="50">
+            </a>
+        
+            <!-- Navbar Toggler for Mobile -->
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+            </button>
+        
+            <!-- Navbar Links -->
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
                 <ul class="navbar-nav text-center">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Home.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="ourTeam.html">Our Team</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="gallery.html">Gallery</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="sponsors.html">Sponsers</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ourTeam.html">Our Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sponsors.html">Sponsors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="">Contact Us</a>
+                    </li>
                 </ul>
-              </div>
+            </div>
             </div>
         </nav>
     </body>
