--- a/Website/ourTeam.html
+++ b/Website/ourTeam.html
@@ -94,7 +94,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Our Team</a>
+                        <a class="nav-link active" aria-current="page" href="">Our Team</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
